crates/broza-cli/tests/snapshots/help_snapshots__help_config_get.snap
---
source: crates/broza-cli/tests/help_snapshots.rs
expression: help_for(args)
---
Print the value of one key

Usage: broza config get [OPTIONS] <KEY>

Arguments:
  <KEY>  Configuration key, for example `min-size`

Options:
      --json            JSON output on stdout. Disables color, progress and interactivity
      --csv             Flat CSV output on stdout. Only on tabular commands
  -o, --output <FILE>   Write output to a file instead of stdout
      --no-color        Disable ANSI color. Automatic without a TTY or with `NO_COLOR` set
  -q, --quiet           Errors only. Silences progress and non-critical warnings
  -v, --verbose...      More diagnostic detail on stderr. Repeatable
      --config <FILE>   Alternative configuration file [default: ~/.config/broza/config.toml]
      --profile <NAME>  Configuration profile to apply
      --no-cache        Ignore the scan cache and force a full analysis
  -h, --help            Print help
